src/test/ui/auto-ref-slice-plus-ref.stderr
error[E0599]: no method named `test_mut` found for struct `Vec<{integer}>` in the current scope
  --> $DIR/auto-ref-slice-plus-ref.rs:7:7
   |
LL |     a.test_mut();
   |       ^^^^^^^^ help: there is a method with a similar name: `get_mut`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `MyIter` defines an item `test_mut`, perhaps you need to implement it
  --> $DIR/auto-ref-slice-plus-ref.rs:14:1
   |
LL | trait MyIter {
   | ^^^^^^^^^^^^

error[E0599]: no method named `test` found for struct `Vec<{integer}>` in the current scope
  --> $DIR/auto-ref-slice-plus-ref.rs:8:7
   |
LL |     a.test();
   |       ^^^^ method not found in `Vec<{integer}>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `MyIter` defines an item `test`, perhaps you need to implement it
  --> $DIR/auto-ref-slice-plus-ref.rs:14:1
   |
LL | trait MyIter {
   | ^^^^^^^^^^^^

error[E0599]: no method named `test` found for array `[{integer}; 1]` in the current scope
  --> $DIR/auto-ref-slice-plus-ref.rs:10:11
   |
LL |     ([1]).test();
   |           ^^^^ method not found in `[{integer}; 1]`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `MyIter` defines an item `test`, perhaps you need to implement it
  --> $DIR/auto-ref-slice-plus-ref.rs:14:1
   |
LL | trait MyIter {
   | ^^^^^^^^^^^^

error[E0599]: no method named `test` found for reference `&[{integer}; 1]` in the current scope
  --> $DIR/auto-ref-slice-plus-ref.rs:11:12
   |
LL |     (&[1]).test();
   |            ^^^^ method not found in `&[{integer}; 1]`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `MyIter` defines an item `test`, perhaps you need to implement it
  --> $DIR/auto-ref-slice-plus-ref.rs:14:1
   |
LL | trait MyIter {
   | ^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0599`.
